--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "axios": "^0.22.0",
+    "babel-loader": "8.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
-    "babel-loader": "8.1.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
