--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-loader": "8.1.0",
     "formik": "^2.2.9",
     "react": "^17.0.2",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
