--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
     "redux-saga": "^1.1.3",
+    "reselect": "^4.1.4",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.11"
